--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
-theme: jekyll-theme-minimal
 title: Lead State Machine Architecture
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-remote-theme
